dinoco_docs/src/content/v0.0.1/ko-kr/orm/first-steps.mdx
export const title = "첫 단계";

# 첫 단계

Dinoco를 사용하려면 마이그레이션 및 기타 시스템을 처리할 수 있도록 CLI를 설치해야 합니다!

```bash
cargo install dinoco-cli
```

Dinoco 환경을 생성하려면 다음 명령을 실행하세요:

```bash
dinoco init
```

데이터베이스와 필요한 모든 설정을 선택하면 프로젝트의 루트 디렉토리에 `dinoco` 폴더가 생성됩니다.

이 폴더에는 다음이 포함됩니다:

- **마이그레이션:** 데이터베이스의 변경 이력.
- **스키마:** 데이터 구조의 중앙 정의.
- **모델:** Rust 코드에서 사용할 타입화된 표현.

## 어떻게 작동하나요?

### 1. 스키마 및 연결 정의

Dinoco 스키마는 모델과 데이터베이스 구성의 내용을 정의합니다.

```dinoco
config {
	database = "postgresql"
	database_url = env("DATABASE_URL")
}

model User {
	id    Integer     @id @default(autoincrement())
	email String  @unique
	name  String?

	posts Post[]
}

model Post {
	id        Integer     @id @default(autoincrement())
	title     String
	published Boolean @default(false)

	author    User?   @relation(fields: [authorId], references: [id])
	authorId  Integer?
}
```

### 2. 마이그레이션 생성

`--apply`를 사용하여 마이그레이션을 생성하면 데이터베이스에 적용되고 모델이 자동으로 생성됩니다!

```bash
dinoco migrate generate --apply
```

### 3. DinocoClient로 쿼리

```rust
use dinoco::{DinocoClientConfig, DinocoQueryLogger, DinocoQueryLoggerOptions, Extend, find_many, insert_into};

#[path = "../dinoco/mod.rs"]
mod database;

use database::models::*;

#[derive(Debug, Clone, Extend)]
#[extend(User)]
struct UserWithRelation {
    id: i64,
    email: String,
    posts: Vec<PostSimple>,
}

#[derive(Debug, Clone, Extend)]
#[extend(Post)]
struct PostSimple {
    title: String,
    published: bool,
}

#[tokio::main]
async fn main() -> dinoco::DinocoResult<()> {
    let _ = dotenvy::dotenv();

    let config = DinocoClientConfig::default()
        .with_snowflake_node_id(7)
        .with_query_logger(DinocoQueryLogger::stdout(DinocoQueryLoggerOptions::verbose()));

    let client = database::create_connection(config).await?;

    // 관련 게시물과 함께 사용자 삽입.
    insert_into::<User>()
        .values(User { id: 0, email: "bia@dinoco.rs".to_string(), name: Some("Bia".to_string()) })
        .with_relation(Post { id: 0, title: "Meu primeiro post".to_string(), published: true, authorId: None })
        .execute(&client)
        .await?;

    // 모든 사용자와 해당 게시물을 검색합니다.
    let users = find_many::<User>().select::<UserWithRelation>().includes(|x| x.posts()).execute(&client).await?;

    println!("{users:#?}");

    // 결과:
    // [
    // 	UserWithRelation {
    // 		email: "bia@dinoco.rs",
    // 		posts: [
    // 			Post {
    // 				title: "Meu primeiro post",
    // 				published: true,
    // 			},
    // 		],
    // 	},
    // ]

    Ok(())
}
```

## 다음 단계

- [**Dinoco 스키마**](/v0.0.1/orm/introduction-dinoco): Dinoco의 구조와 개념을 더 잘 이해하세요.
- [**Dinoco 클라이언트**](/v0.0.1/orm/first-steps): 이 완전한 클라이언트 워크플로우를 확인하세요.
